web/app/styles/operation-selector.css
.operation-selector {
  margin-left: -35px;
  float: left;
}

.operation-selector .box {
  background: #001424; /* Brand color. */
  position: absolute;
  right: 35px;
  top: 60px; /* The workspace header, on a good day. */
  padding: 0;
  max-width: 40%; /* Avoid very long lines and very sparse forms. */
  margin-bottom: 20px;
  max-height: 90%;
  margin-left: 35px;
  overflow-y: auto;
  z-index: 4; /* This has to be over the state view and the box editor panels. */
}
.operation-selector .box h1 {
  padding: 15px;
  margin: 0;
  color: black;
}

.operation-selector .categories {
  font-weight: bold;
  cursor: pointer;
  user-select: none;
  padding: 0;
  z-index: 4;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap-reverse;
  height: calc(100vh - 60px);
  /* 60px is the workspace header minimum size. If the header is bigger (e.g. due to line breaks)
   * the bottom may extend beyond the screen. TODO: Any ideas for a fix? */
}
.operation-selector .category {
  padding: 10px 0;
  text-align: center;
  font: 15px Arial;
  width: 35px;
  height: 35px;
  background: #001424; /* Brand color. */
}
.operation-selector .category.active {
  padding-left: 9px;
  border-left: 1px solid transparent;
}
.operation-selector .categories.uneditable {
  cursor: not-allowed;
}

.operation-selector .box .clicky:hover { color: black !important; }

:root {
  --lynx-blue: #39bcf3;
  --lynx-green: #6fdb11;
  --lynx-purple: #bf45e8;
  --lynx-orange: #ff8800;
}

.operation-selector .category.blue { color: var(--lynx-blue); }
.operation-selector .category.active.blue { background: var(--lynx-blue); color: black; }
.operation-selector .box.blue h1 { background: var(--lynx-blue); }
.operation-selector .box.blue .operation:hover { color: var(--lynx-blue); }

.operation-selector .category.green { color: var(--lynx-green); }
.operation-selector .category.active.green { background: var(--lynx-green); color: black; }
.operation-selector .box.green h1 { background: var(--lynx-green); }
.operation-selector .box.green .operation:hover { color: var(--lynx-green); }

.operation-selector .category.purple { color: var(--lynx-purple); }
.operation-selector .category.active.purple { background: var(--lynx-purple); color: black; }
.operation-selector .box.purple h1 { background: var(--lynx-purple); }
.operation-selector .box.purple .operation:hover { color: var(--lynx-purple); }

.operation-selector .category.orange { color: var(--lynx-orange); }
.operation-selector .category.active.orange { background: var(--lynx-orange); color: black; }
.operation-selector .box.orange h1 { background: var(--lynx-orange); }
.operation-selector .box.orange .operation:hover { color: var(--lynx-orange); }

operation-selector-entry div {
  cursor: pointer;
  user-select: none;
  padding: 5px;
  color: rgba(255, 255, 255, 0.8);
}
operation-selector-entry:hover div {
  background: black !important;
}
operation-selector-entry.highlight div {
  color: #39bcf3 !important; /* Brand color. */
  background: black !important;
}
operation-selectory-entry div.disabled {
  color: rgba(255, 255, 255, 0.2) !important;
}

.operation-tree-node {
  cursor: pointer;
  user-select: none;
  padding: 5px;
  color: rgba(255, 255, 255, 0.8);
}
.operation-tree-node:hover {
  color: gold !important;
  background: black !important;
}
.operation-tree-node div.disabled {
  color: rgba(255, 255, 255, 0.2) !important;
}
.operation-tree-node-indent {
  padding-left: 10px;
}
.operation-tree-node-icon {
  margin-right: 5px;
}

.operation-selector #filter {
  background: transparent;
  border: 0;
  outline: 0;
}

.operation-selector #edit-operation-button .glyphicon-pencil {
  color: #333;
}

